# inspace-contracts

./: .gitignore  Cargo.toml  README.md
artifacts/motherspace/: motherspace.contract  motherspace.wasm
artifacts/motherspace/0.1.0/: motherspace.contract  motherspace.json  motherspace.wasm
artifacts/plugins/flipper/: flipper.contract  flipper.wasm
artifacts/plugins/flipper/0.1.0/: flipper.contract  flipper.json  flipper.wasm
artifacts/plugins/flipper_launcher/: flipper_launcher.contract  flipper_launcher.wasm
artifacts/plugins/flipper_launcher/0.1.0/: flipper_launcher.contract  flipper_launcher.json  flipper_launcher.wasm
artifacts/plugins/polls/: polls.contract  polls.wasm
artifacts/plugins/polls/0.1.0/: polls.contract  polls.json  polls.wasm
artifacts/plugins/polls_launcher/: polls_launcher.contract  polls_launcher.wasm
artifacts/plugins/polls_launcher/0.1.0/: polls_launcher.contract  polls_launcher.json  polls_launcher.wasm
artifacts/plugins/posts/: posts.contract  posts.wasm
artifacts/plugins/posts/0.1.0/: posts.contract  posts.json  posts.wasm
artifacts/plugins/posts/0.2.0/: posts.contract  posts.json  posts.wasm
artifacts/plugins/posts_launcher/: posts_launcher.contract  posts_launcher.wasm
artifacts/plugins/posts_launcher/0.1.0/: posts_launcher.contract  posts_launcher.json  posts_launcher.wasm
artifacts/space/: space.contract  space.wasm
artifacts/space/0.1.0/: space.contract  space.json  space.wasm
contracts/motherspace/: Cargo.toml  lib.rs
contracts/plugins/flipper/: Cargo.toml  lib.rs
contracts/plugins/flipper/launcher/: Cargo.toml  lib.rs
contracts/plugins/polls/: Cargo.toml  lib.rs
contracts/plugins/polls/launcher/: Cargo.toml  lib.rs
contracts/plugins/posts/: Cargo.toml  lib.rs
contracts/plugins/posts/launcher/: Cargo.toml  lib.rs
contracts/space/: Cargo.toml  lib.rs
scripts/: build-flipper.sh  build-motherspace.sh  build-polls.sh  build-posts.sh  build-space.sh  build.sh  copy_artifacts.sh  copy_contract_metas.sh  upload-flipper.sh  upload-polls.sh  upload-posts.sh  upload.sh
shared/: Cargo.toml
shared/helper-macros/: Cargo.toml
shared/helper-macros/src/: lib.rs
shared/src/: lib.rs
shared/src/helpers/: macros.rs
shared/src/traits/: codehash.rs  mod.rs  plugin_base.rs  plugin_launcher.rs  space_profile.rs
shared/traits/: Cargo.toml
shared/traits/src/: lib.rs  upgradeable.rs
