[workspace]
members = [
    "shared",
    "shared/helper-macros",
    "shared/traits",
    "contracts/motherspace",
    "contracts/space",
    "contracts/plugins/posts",
    "contracts/plugins/posts/launcher",
    "contracts/plugins/flipper",
    "contracts/plugins/flipper/launcher",
    "contracts/plugins/polls",
    "contracts/plugins/polls/launcher",
]
