[package]
name = "flipper_launcher"
version = "0.1.0"
authors = ["Thang X. Vu <thang@coongcrafts.io>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

flipper = { path = '..', default-features = false, features = ["ink-as-dependency"]}

shared = { path = '../../../../shared', default-features = false, features = [] }
openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", tag = "4.0.0", default-features = false, features = ['ownable', 'upgradeable'] }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "shared/std",
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []
